k8s/system/traefik/lily/resources/whoami/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami:v1.11.0@sha256:200689790a0a0ea48ca45992e0450bc26ccab5307375b41c84dfc4f2475937ab
          args:
            - --port=8080
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      hostname: whoami
      securityContext:
        seccompProfile:
          type: RuntimeDefault
