k8s/system/traefik/lily/resources/whoami/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
