k8s/system/traefik/lily/resources/whoami/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-whoami

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`whoami.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`whoami.starry.blue`)
      services:
        - name: whoami
          port: http

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-whoami-gateway

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`whoami.gateway.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`whoami.gateway.starry.blue`)
      services:
        - name: whoami
          port: http

  tls:
    options:
      name: gateway

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-whoami-web

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/whoami`)
      services:
        - name: whoami
          port: http
